updated styling and added animations

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <main>
     <section class="intro">
-      <img src="images/your-photo.jpg" alt="Your photo" class="profile-photo">
-      <h1>Your Name</h1>
-      <p>Aspiring [Your Role] | [Tagline goes here]</p>
+      <img src="images/my-photo.jpg" alt="Your photo" class="profile-photo">
+      <h1>Ashton Alva</h1>
+      <p>Computer Science Student | Future Software Engineer</p>
     </section>
   </main>
 
