added project pages

--- a/projects/cos.html
+++ b/projects/cos.html
@@ -19,7 +19,8 @@
   <main>
     <section class="project-detail">
       <h1>Cafeteria Ordering System (COS) Web App</h1>
-      <p>More details about this project will go here.</p>
+      <p>This full-stack web application was built to simulate a cafeteria-style ordering experience. As project leader, I guided a team through the planning, development, and testing phases. Users can browse a menu, add items to a cart, and proceed to checkout through a simple, responsive UI.</p>
+      <p><strong>Technologies Used:</strong> Python, Flask, HTML, CSS, JavaScript</p>
     </section>
   </main>
 </body>
