--- a/projects/ml.html
+++ b/projects/ml.html
@@ -1,2 +1,27 @@
-<title>Machine Learning Fundamentals Project</title>
-<h1>Machine Learning Fundamentals Project</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Machine Learning Fundamentals Project</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../about.html">About</a></li>
+      <li><a href="../projects.html">Projects</a></li>
+      <li><a href="../skills.html">Skills</a></li>
+      <li><a href="../contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="project-detail">
+      <h1>Machine Learning Fundamentals Project</h1>
+      <p>This project applied a wide range of ML techniques, including supervised and unsupervised learning. I implemented classification, clustering, and regression models using real-world datasets. The project emphasized model evaluation, dimensionality reduction, and performance tuning.</p>
+      <p><strong>Technologies Used:</strong> Python, Scikit-learn, Pandas, NumPy</p>
+    </section>
+  </main>
+</body>
+</html>
