--- a/projects/rag.html
+++ b/projects/rag.html
@@ -1,2 +1,27 @@
-<title>RAG Chatbot with IBM Watsonx & LangChain</title>
-<h1>RAG Chatbot with IBM Watsonx & LangChain</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>RAG Chatbot with IBM Watsonx & LangChain</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../about.html">About</a></li>
+      <li><a href="../projects.html">Projects</a></li>
+      <li><a href="../skills.html">Skills</a></li>
+      <li><a href="../contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="project-detail">
+      <h1>RAG Chatbot with IBM Watsonx & LangChain</h1>
+      <p>This Retrieval-Augmented Generation chatbot combines document embeddings with large language models to answer questions based on uploaded PDFs. Built with LangChain and IBM Watsonx, it enables dynamic, context-aware interactions through a Gradio-based frontend.</p>
+      <p><strong>Technologies Used:</strong> Python, IBM Watsonx, LangChain, Gradio, Chroma</p>
+    </section>
+  </main>
+</body>
+</html>
