--- a/projects/watson.html
+++ b/projects/watson.html
@@ -1,2 +1,27 @@
-<title>Watson NLP Emotion Detector</title>
-<h1>Watson NLP Emotion Detector</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Watson NLP Emotion Detector</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../about.html">About</a></li>
+      <li><a href="../projects.html">Projects</a></li>
+      <li><a href="../skills.html">Skills</a></li>
+      <li><a href="../contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section class="project-detail">
+      <h1>Watson NLP Emotion Detector</h1>
+      <p>This project is a web app that analyzes user input text and detects emotional tone using IBM Watson’s NLP API. It features a responsive interface and presents a detailed sentiment output for each submission.</p>
+      <p><strong>Technologies Used:</strong> Python, Flask, IBM Watson, HTML, CSS, JavaScript</p>
+    </section>
+  </main>
+</body>
+</html>
