--- a/projects/geometry.html
+++ b/projects/geometry.html
@@ -1,2 +1,30 @@
-<title>Geometry Dash Clone</title>
-<h1>Geometry Dash Clone</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Geometry Dash Clone</title>
+  <link rel="stylesheet" href="../css/style.css" />
+</head>
+<body>
+
+  <nav>
+    <ul>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="../about.html">About</a></li>
+      <li><a href="../projects.html">Projects</a></li>
+      <li><a href="../skills.html">Skills</a></li>
+      <li><a href="../contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section class="project-detail">
+      <h1>Geometry Dash Clone</h1>
+      <p>This browser-based project is a simplified clone of the popular game Geometry Dash. It demonstrates core concepts of game development including jump mechanics, gravity simulation, and obstacle collision detection.</p>
+      <p><strong>Technologies Used:</strong> JavaScript, HTML5 Canvas</p>
+    </section>
+  </main>
+
+</body>
+</html>
