added several changes to skills page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <img src="images/my-photo.jpg" alt="Your photo" class="profile-photo">
       <h1>Ashton Alva</h1>
       <p>Computer Science Student | Future Software Engineer</p>
+      <p>I’m a Computer Science student passionate about AI, cybersecurity, and full-stack development. I enjoy building innovative solutions and constantly exploring new technologies to improve user experiences.</p>
     </section>
   </main>
 
