--- a/skills.html
+++ b/skills.html
@@ -33,6 +33,28 @@
         <li>IBM Watson, LangChain, Gradio, Scikit-learn, Pandas, NumPy</li>
       </ul>
 
+      <h2>Certifications</h2>
+      <ul>
+        <li>Cyber Security CompTIA</li>
+        <li>Google IT Support (Coursera)</li>
+        <li>C++ Programming Certification</li>
+        <li>Introduction to Artificial Intelligence (IBM)</li>
+        <li>Generative AI: Introduction and Applications (IBM)</li>
+        <li>Generative AI: Prompt Engineering Basics (IBM)</li>
+        <li>Python for Data Science, AI & Development (IBM)</li>
+        <li>Developing AI Applications with Python and Flask (IBM)</li>
+        <li>Building Generative AI-Powered Applications with Python (IBM)</li>
+        <li>Data Analysis with Python (IBM)</li>
+        <li>Introduction to Deep Learning & Neural Networks with Keras (IBM)</li>
+        <li>Generative AI and LLMs: Architecture and Data Preparation (IBM)</li>
+        <li>Gen AI Foundational Models for NLP & Language Understanding (IBM)</li>
+        <li>Generative AI Language Modeling with Transformers (IBM)</li>
+        <li>Generative AI Engineering and Fine-Tuning Transformers (IBM)</li>
+        <li>Generative AI Advanced Fine-Tuning for LLMs (IBM)</li>
+        <li>Fundamentals of AI Agents Using RAG and LangChain (IBM)</li>
+        <li>IBM Generative AI Engineering Certification</li>
+      </ul>
+
       <h2>Concepts</h2>
       <ul>
         <li>Data Structures (Arrays, Linked Lists, Stacks, Trees)</li>
@@ -44,6 +66,7 @@
       <ul>
         <li>Team Collaboration, Communication, Problem Solving, Adaptability</li>
       </ul>
+      
     </section>
   </main>
 
