updated portfolio to match latest resume

--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
   <main>
     <section class="intro">
       <h1>About Me</h1>
-      <p>Hello! I'm Ashton Alva, a computer science student passionate about software engineering, AI, and system-level programming. I enjoy building projects that are clean, functional, and solve real problems.</p>
+      <p>Hello! I'm Ashton Alva, a Computer Science undergraduate at CSU Fullerton (expected March 2026), with a strong foundation in AI, software engineering, and full-stack development. I enjoy solving real-world problems with code and leading collaborative technical projects.</p>
 
-      <p>My interests include artificial intelligence, cybersecurity, web development, and performance optimization. Outside of tech, I enjoy fitness, music, and exploring creative tools.</p>
+      <p>My core interests include artificial intelligence, machine learning, cybersecurity, and full-stack systems using tools like React, Flask, and SQL. I'm deeply engaged in applying generative AI and cloud-based solutions to real use cases.</p>
 
-      <p>Currently pursuing my Bachelor’s in Computer Science and looking for software engineering internships.</p>
+      <p>I’ve served as a project lead in multiple academic software builds, and I’m always looking to grow as a developer through internships and open-source collaboration.</p>
 
       <a href="resume/resume.pdf" download>Download My Resume</a>
     </section>
