--- a/projects/rag.html
+++ b/projects/rag.html
@@ -19,8 +19,8 @@
   <main>
     <section class="project-detail">
       <h1>RAG Chatbot with IBM Watsonx & LangChain</h1>
-      <p>This Retrieval-Augmented Generation chatbot combines document embeddings with large language models to answer questions based on uploaded PDFs. Built with LangChain and IBM Watsonx, it enables dynamic, context-aware interactions through a Gradio-based frontend.</p>
-      <p><strong>Technologies Used:</strong> Python, IBM Watsonx, LangChain, Gradio, Chroma</p>
+<p>Developed a Retrieval-Augmented Generation (RAG) chatbot that answers questions based on uploaded PDF documents using IBM Watsonx and LangChain. Implemented a full pipeline with document loading, text splitting, vector embedding (Chroma), and QA retrieval via LangChain’s RetrievalQA. Built a Gradio web interface for real-time interactions and improved document accessibility.</p>
+<p><strong>Technologies Used:</strong> Python, IBM Watsonx, LangChain, Gradio, Chroma</p>
     </section>
   </main>
 </body>
