--- a/skills.html
+++ b/skills.html
@@ -29,30 +29,40 @@
 
       <h2>Tools & Technologies</h2>
       <ul>
-        <li>Flask, Node.js, Git, GitHub, Linux, Windows, Visual Studio Code</li>
+        <li>Flask, Node.js, Git, GitHub, Linux, Windows, Visual Studio Code, React, SQL, Agile</li>
         <li>IBM Watson, LangChain, Gradio, Scikit-learn, Pandas, NumPy</li>
       </ul>
 
       <h2>Certifications</h2>
+
+      <h3>AI & Machine Learning</h3>
+      <ul>
+        <li>Introduction to Artificial Intelligence (IBM)</li>
+        <li>Generative AI: Introduction and Applications (IBM)</li>
+        <li>Prompt Engineering Basics (IBM)</li>
+        <li>LLMs Architecture and Data Preparation (IBM)</li>
+        <li>Gen AI for NLP & Language Understanding (IBM)</li>
+        <li>Language Modeling with Transformers (IBM)</li>
+        <li>Fine-Tuning Transformers (IBM)</li>
+        <li>Advanced Fine-Tuning for LLMs (IBM)</li>
+        <li>AI Agents Using RAG and LangChain (IBM)</li>
+        <li>IBM Generative AI Engineering</li>
+        <li>Deep Learning & Neural Networks with Keras</li>
+        <li>Generative AI-Powered Applications with Python</li>
+      </ul>
+
+      <h3>Programming & Development</h3>
+      <ul>
+        <li>Python for Data Science, AI & Development</li>
+        <li>Developing AI Applications with Python and Flask</li>
+        <li>Data Analysis with Python</li>
+        <li>C++ Programming</li>
+      </ul>
+
+      <h3>IT & Cybersecurity</h3>
       <ul>
         <li>Cyber Security CompTIA</li>
         <li>Google IT Support (Coursera)</li>
-        <li>C++ Programming Certification</li>
-        <li>Introduction to Artificial Intelligence (IBM)</li>
-        <li>Generative AI: Introduction and Applications (IBM)</li>
-        <li>Generative AI: Prompt Engineering Basics (IBM)</li>
-        <li>Python for Data Science, AI & Development (IBM)</li>
-        <li>Developing AI Applications with Python and Flask (IBM)</li>
-        <li>Building Generative AI-Powered Applications with Python (IBM)</li>
-        <li>Data Analysis with Python (IBM)</li>
-        <li>Introduction to Deep Learning & Neural Networks with Keras (IBM)</li>
-        <li>Generative AI and LLMs: Architecture and Data Preparation (IBM)</li>
-        <li>Gen AI Foundational Models for NLP & Language Understanding (IBM)</li>
-        <li>Generative AI Language Modeling with Transformers (IBM)</li>
-        <li>Generative AI Engineering and Fine-Tuning Transformers (IBM)</li>
-        <li>Generative AI Advanced Fine-Tuning for LLMs (IBM)</li>
-        <li>Fundamentals of AI Agents Using RAG and LangChain (IBM)</li>
-        <li>IBM Generative AI Engineering Certification</li>
       </ul>
 
       <h2>Concepts</h2>
