--- a/projects/cos.html
+++ b/projects/cos.html
@@ -19,8 +19,8 @@
   <main>
     <section class="project-detail">
       <h1>Cafeteria Ordering System (COS) Web App</h1>
-      <p>This full-stack web application was built to simulate a cafeteria-style ordering experience. As project leader, I guided a team through the planning, development, and testing phases. Users can browse a menu, add items to a cart, and proceed to checkout through a simple, responsive UI.</p>
-      <p><strong>Technologies Used:</strong> Python, Flask, HTML, CSS, JavaScript</p>
+<p>Served as Team Lead in developing a full-stack cafeteria ordering system to streamline menu browsing, order placement, and tracking. Designed and implemented the React front end and Flask back end, developing RESTful APIs and managing a SQL database. Coordinated teammates’ contributions and guided the team through version control, modular design, and testing.</p>
+<p><strong>Technologies Used:</strong> Python, React, Flask, SQL, Git/GitHub</p>
     </section>
   </main>
 </body>
