updated portfolio to match latest resume

--- a/about.html
+++ b/about.html
@@ -25,11 +25,21 @@
 
       <p>My core interests include artificial intelligence, machine learning, cybersecurity, and full-stack systems using tools like React, Flask, and SQL. I'm deeply engaged in applying generative AI and cloud-based solutions to real use cases.</p>
 
-      <p>I’ve served as a project lead in multiple academic software builds, and I’m always looking to grow as a developer through internships and open-source collaboration.</p>
+      <p>I've served as a project lead in multiple academic software builds, and I'm always looking to grow as a developer through internships and open-source collaboration.</p>
 
       <a href="resume/resume.pdf" download>Download My Resume</a>
     </section>
   </main>
 
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
