--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
 
   <main>
     <section class="intro">
-      <img src="images/my-photo.jpg" alt="Your photo" class="profile-photo">
+      <img src="images/my-photo.jpg" alt="Ashton Alva" class="profile-photo">
       <h1>Ashton Alva</h1>
       <p>Computer Science Student | Future Software Engineer</p>
-      <p>I’m a Computer Science student passionate about AI, cybersecurity, and full-stack development. I enjoy building innovative solutions and constantly exploring new technologies to improve user experiences.</p>
+      <p>I'm a Computer Science student passionate about AI, cybersecurity, and full-stack development. I enjoy building innovative solutions and constantly exploring new technologies to improve user experiences.</p>
     </section>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
 
   <script src="js/script.js"></script>
 </body>
