--- a/projects.html
+++ b/projects.html
@@ -26,14 +26,14 @@
         <h2><a href="projects/cos.html">Cafeteria Ordering System (COS) Web App</a></h2>
         <p>Led the development of a cafeteria ordering web application built with Flask. The system allows users to browse a menu, add items to a cart, and complete the checkout process. Managed team coordination, feature planning, and testing documentation. Designed the app to be intuitive and extensible for future enhancements.</p>
         <p><strong>Technologies:</strong> Python, Flask, HTML, CSS, JavaScript</p>
-        <a href="https://github.com/ashtonalva/cafeteria-ordering-system" target="_blank">View Project</a>
+        <a href="https://github.com/ashtonalva/cafeteria-ordering-system" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
       </div>
 
       <div class="project">
         <h2><a href="projects/watson.html">Watson NLP Emotion Detector</a></h2>
         <p>Developed a web application using IBM Watson Natural Language Processing to detect and classify emotional tone in user input. Integrated Flask for the backend and designed the interface using HTML/CSS/JavaScript.</p>
         <p><strong>Technologies:</strong> Python, Flask, IBM Watson, HTML, CSS, JavaScript</p>
-        <a href="https://github.com/ashtonalva/watson-nlp-web-app" target="_blank">View Project</a>
+        <a href="https://github.com/ashtonalva/watson-nlp-web-app" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
       </div>
 
       <div class="project">
@@ -52,11 +52,21 @@
         <h2><a href="projects/geometry.html">Geometry Dash Clone</a></h2>
         <p>Created a browser-based 2D platformer inspired by Geometry Dash to demonstrate game mechanics including jump physics, collision detection, and frame-based animation.</p>
         <p><strong>Technologies:</strong> JavaScript, HTML5 Canvas</p>
-        <a href="https://github.com/ashtonalva/geometry-dash-clone" target="_blank">View Project</a>
+        <a href="https://github.com/ashtonalva/geometry-dash-clone" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
       </div>
 
     </section>
   </main>
 
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
