--- a/projects/cos.html
+++ b/projects/cos.html
@@ -19,9 +19,21 @@
   <main>
     <section class="project-detail">
       <h1>Cafeteria Ordering System (COS) Web App</h1>
-<p>Served as Team Lead in developing a full-stack cafeteria ordering system to streamline menu browsing, order placement, and tracking. Designed and implemented the React front end and Flask back end, developing RESTful APIs and managing a SQL database. Coordinated teammates’ contributions and guided the team through version control, modular design, and testing.</p>
-<p><strong>Technologies Used:</strong> Python, React, Flask, SQL, Git/GitHub</p>
+      <p>Served as Team Lead in developing a full-stack cafeteria ordering system to streamline menu browsing, order placement, and tracking. Designed and implemented the React front end and Flask back end, developing RESTful APIs and managing a SQL database. Coordinated teammates' contributions and guided the team through version control, modular design, and testing.</p>
+      <p><strong>Technologies Used:</strong> Python, React, Flask, SQL, Git/GitHub</p>
+      <a href="https://github.com/ashtonalva/cafeteria-ordering-system" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
     </section>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
