--- a/projects/rag.html
+++ b/projects/rag.html
@@ -19,9 +19,20 @@
   <main>
     <section class="project-detail">
       <h1>RAG Chatbot with IBM Watsonx & LangChain</h1>
-<p>Developed a Retrieval-Augmented Generation (RAG) chatbot that answers questions based on uploaded PDF documents using IBM Watsonx and LangChain. Implemented a full pipeline with document loading, text splitting, vector embedding (Chroma), and QA retrieval via LangChain’s RetrievalQA. Built a Gradio web interface for real-time interactions and improved document accessibility.</p>
-<p><strong>Technologies Used:</strong> Python, IBM Watsonx, LangChain, Gradio, Chroma</p>
+      <p>Developed a Retrieval-Augmented Generation (RAG) chatbot that answers questions based on uploaded PDF documents using IBM Watsonx and LangChain. Implemented a full pipeline with document loading, text splitting, vector embedding (Chroma), and QA retrieval via LangChain's RetrievalQA. Built a Gradio web interface for real-time interactions and improved document accessibility.</p>
+      <p><strong>Technologies Used:</strong> Python, IBM Watsonx, LangChain, Gradio, Chroma</p>
     </section>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
