--- a/projects/watson.html
+++ b/projects/watson.html
@@ -19,9 +19,21 @@
   <main>
     <section class="project-detail">
       <h1>Watson NLP Emotion Detector</h1>
-      <p>This project is a web app that analyzes user input text and detects emotional tone using IBM Watson’s NLP API. It features a responsive interface and presents a detailed sentiment output for each submission.</p>
+      <p>This project is a web app that analyzes user input text and detects emotional tone using IBM Watson's NLP API. It features a responsive interface and presents a detailed sentiment output for each submission.</p>
       <p><strong>Technologies Used:</strong> Python, Flask, IBM Watson, HTML, CSS, JavaScript</p>
+      <a href="https://github.com/ashtonalva/watson-nlp-web-app" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
     </section>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
