--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,22 @@
 
       <div class="social-links">
         <p>Connect with me on:</p>
-        <a href="https://github.com/ashtonalva" target="_blank">GitHub</a> |
-        <a href="https://linkedin.com/in/ashtonalva" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a>
+        <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         <a href="mailto:ashtondarryl@gmail.com">Email Me</a>
       </div>
     </section>
   </main>
 
-  <script>
-    document.getElementById("contact-form").addEventListener("submit", function (e) {
-      e.preventDefault();
-      alert("Message submitted! (Form is non-functional — just for display.)");
-    });
-  </script>
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
 
+  <script src="js/script.js"></script>
 </body>
 </html>
