--- a/projects/geometry.html
+++ b/projects/geometry.html
@@ -23,8 +23,19 @@
       <h1>Geometry Dash Clone</h1>
       <p>This browser-based project is a simplified clone of the popular game Geometry Dash. It demonstrates core concepts of game development including jump mechanics, gravity simulation, and obstacle collision detection.</p>
       <p><strong>Technologies Used:</strong> JavaScript, HTML5 Canvas</p>
+      <a href="https://github.com/ashtonalva/geometry-dash-clone" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
     </section>
   </main>
 
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
