--- a/projects/ml.html
+++ b/projects/ml.html
@@ -23,5 +23,16 @@
       <p><strong>Technologies Used:</strong> Python, Scikit-learn, Pandas, NumPy</p>
     </section>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
+    <p>
+      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
+      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+      <a href="mailto:ashtondarryl@gmail.com">Email</a>
+    </p>
+  </footer>
+
+  <script src="../js/script.js"></script>
 </body>
 </html>
