Complete portfolio redesign from scratch - modern single-page layout with animations

--- a/about.html
+++ b/about.html
@@ -1,45 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=index.html#about">
+  <title>About | Ashton Alva</title>
+  <script>
+    window.location.href = 'index.html#about';
+  </script>
 </head>
 <body>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="intro">
-      <h1>About Me</h1>
-      <p>Hello! I'm Ashton Alva, a Computer Science undergraduate at CSU Fullerton (expected March 2026), with a strong foundation in AI, software engineering, and full-stack development. I enjoy solving real-world problems with code and leading collaborative technical projects.</p>
-
-      <p>My core interests include artificial intelligence, machine learning, cybersecurity, and full-stack systems using tools like React, Flask, and SQL. I'm deeply engaged in applying generative AI and cloud-based solutions to real use cases.</p>
-
-      <p>I've served as a project lead in multiple academic software builds, and I'm always looking to grow as a developer through internships and open-source collaboration.</p>
-
-      <a href="resume/resume.pdf" download>Download My Resume</a>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
-    <p>
-      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
-      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
-      <a href="mailto:ashtondarryl@gmail.com">Email</a>
-    </p>
-  </footer>
-
-  <script src="js/script.js"></script>
+  <p>If you are not redirected, <a href="index.html#about">click here</a>.</p>
 </body>
 </html>
