--- a/skills.html
+++ b/skills.html
@@ -1,131 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Skills</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=index.html#skills">
+  <title>Skills | Ashton Alva</title>
+  <script>
+    window.location.href = 'index.html#skills';
+  </script>
 </head>
 <body>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="skills">
-      <h1>Skills</h1>
-
-      <div class="skills-grid">
-        <div class="skill-category">
-          <h3>Programming Languages</h3>
-          <ul>
-            <li>Python</li>
-            <li>C++</li>
-            <li>C#</li>
-            <li>HTML, CSS, JavaScript</li>
-            <li>x86 Assembly</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>Tools & Technologies</h3>
-          <ul>
-            <li>Flask, Node.js</li>
-            <li>React, SQL</li>
-            <li>Git, GitHub</li>
-            <li>Linux, Windows</li>
-            <li>Visual Studio Code</li>
-            <li>Agile Methodologies</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>AI & ML Tools</h3>
-          <ul>
-            <li>IBM Watson</li>
-            <li>LangChain</li>
-            <li>Gradio</li>
-            <li>Scikit-learn</li>
-            <li>Pandas, NumPy</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>AI & Machine Learning Certifications</h3>
-          <ul>
-            <li>Introduction to Artificial Intelligence (IBM)</li>
-            <li>Generative AI: Introduction and Applications (IBM)</li>
-            <li>Prompt Engineering Basics (IBM)</li>
-            <li>LLMs Architecture and Data Preparation (IBM)</li>
-            <li>Gen AI for NLP & Language Understanding (IBM)</li>
-            <li>Language Modeling with Transformers (IBM)</li>
-            <li>Fine-Tuning Transformers (IBM)</li>
-            <li>Advanced Fine-Tuning for LLMs (IBM)</li>
-            <li>AI Agents Using RAG and LangChain (IBM)</li>
-            <li>IBM Generative AI Engineering</li>
-            <li>Deep Learning & Neural Networks with Keras</li>
-            <li>Generative AI-Powered Applications with Python</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>Programming & Development Certifications</h3>
-          <ul>
-            <li>Python for Data Science, AI & Development</li>
-            <li>Developing AI Applications with Python and Flask</li>
-            <li>Data Analysis with Python</li>
-            <li>C++ Programming</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>IT & Cybersecurity Certifications</h3>
-          <ul>
-            <li>Cyber Security CompTIA</li>
-            <li>Google IT Support (Coursera)</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>Core Concepts</h3>
-          <ul>
-            <li>Data Structures (Arrays, Linked Lists, Stacks, Trees)</li>
-            <li>Algorithm Design & Efficiency</li>
-            <li>Class Libraries, Data Abstraction</li>
-            <li>Machine Learning Fundamentals</li>
-            <li>AI Agents, Generative AI</li>
-          </ul>
-        </div>
-
-        <div class="skill-category">
-          <h3>Soft Skills</h3>
-          <ul>
-            <li>Team Collaboration</li>
-            <li>Communication</li>
-            <li>Problem Solving</li>
-            <li>Adaptability</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
-    <p>
-      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
-      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
-      <a href="mailto:ashtondarryl@gmail.com">Email</a>
-    </p>
-  </footer>
-
-  <script src="js/script.js"></script>
+  <p>If you are not redirected, <a href="index.html#skills">click here</a>.</p>
 </body>
 </html>
