--- a/contact.html
+++ b/contact.html
@@ -1,58 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=index.html#contact">
+  <title>Contact | Ashton Alva</title>
+  <script>
+    window.location.href = 'index.html#contact';
+  </script>
 </head>
 <body>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="contact">
-      <h1>Contact Me</h1>
-
-      <form id="contact-form">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Your full name" required />
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="your@email.com" required />
-
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" placeholder="Type your message here..." required></textarea>
-
-        <button type="submit">Send Message</button>
-      </form>
-
-      <div class="social-links">
-        <p>Connect with me on:</p>
-        <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a>
-        <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-        <a href="mailto:ashtondarryl@gmail.com">Email Me</a>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
-    <p>
-      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
-      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
-      <a href="mailto:ashtondarryl@gmail.com">Email</a>
-    </p>
-  </footer>
-
-  <script src="js/script.js"></script>
+  <p>If you are not redirected, <a href="index.html#contact">click here</a>.</p>
 </body>
 </html>
