--- a/index.html
+++ b/index.html
@@ -3,37 +3,368 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home | Ashton Alva</title>
+  <meta name="description" content="Ashton Alva - Computer Science Student & Software Engineer Portfolio">
+  <title>Ashton Alva | Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="contact.html">Contact</a></li>
+  <!-- Navigation -->
+  <nav class="navbar" id="navbar">
+    <div class="nav-container">
+      <div class="nav-logo">
+        <a href="#home">AA</a>
+      </div>
+      <ul class="nav-menu" id="nav-menu">
+        <li><a href="#home" class="nav-link">Home</a></li>
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a></li>
     </ul>
+      <div class="nav-toggle" id="nav-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
   </nav>
 
-  <main>
-    <section class="intro">
-      <img src="images/my-photo.jpg" alt="Ashton Alva" class="profile-photo">
-      <h1>Ashton Alva</h1>
-      <p>Computer Science Student | Future Software Engineer</p>
-      <p>I'm a Computer Science student passionate about AI, cybersecurity, and full-stack development. I enjoy building innovative solutions and constantly exploring new technologies to improve user experiences.</p>
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <div class="hero-background">
+      <div class="gradient-orb orb-1"></div>
+      <div class="gradient-orb orb-2"></div>
+      <div class="gradient-orb orb-3"></div>
+    </div>
+    <div class="hero-content">
+      <div class="hero-text">
+        <p class="hero-greeting">Hi, my name is</p>
+        <h1 class="hero-name">
+          <span class="name-line">Ashton Alva.</span>
+          <span class="name-line">I build things for the web.</span>
+        </h1>
+        <p class="hero-description">
+          I'm a Computer Science student passionate about AI, cybersecurity, and full-stack development. 
+          I enjoy building innovative solutions and constantly exploring new technologies to improve user experiences.
+        </p>
+        <div class="hero-buttons">
+          <a href="#projects" class="btn btn-primary">View My Work</a>
+          <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+        </div>
+      </div>
+      <div class="hero-image">
+        <div class="image-wrapper">
+          <img src="images/my-photo.jpg" alt="Ashton Alva" class="profile-image">
+          <div class="image-border"></div>
+        </div>
+      </div>
+    </div>
+    <div class="scroll-indicator">
+      <div class="mouse">
+        <div class="wheel"></div>
+      </div>
+      <div class="arrow">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
     </section>
-  </main>
 
-  <footer>
-    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
-    <p>
-      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
-      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
-      <a href="mailto:ashtondarryl@gmail.com">Email</a>
-    </p>
+  <!-- About Section -->
+  <section id="about" class="about">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">01.</span>
+        <h2 class="section-title">About Me</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="about-content">
+        <div class="about-text">
+          <p>
+            Hello! I'm Ashton, a Computer Science student based in the US, passionate about creating 
+            exceptional digital experiences through code.
+          </p>
+          <p>
+            I specialize in building full-stack applications with a focus on modern technologies, 
+            AI integration, and cybersecurity. My goal is to create solutions that are not only 
+            functional but also elegant and user-friendly.
+          </p>
+          <p>Here are a few technologies I've been working with recently:</p>
+          <ul class="tech-list">
+            <li>JavaScript (ES6+)</li>
+            <li>Python</li>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>Machine Learning</li>
+            <li>Cybersecurity</li>
+          </ul>
+        </div>
+        <div class="about-image">
+          <div class="image-frame">
+            <img src="images/my-photo.jpg" alt="Ashton Alva">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="projects">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">02.</span>
+        <h2 class="section-title">Some Things I've Built</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="projects-grid">
+        <div class="project-card featured">
+          <div class="project-content">
+            <p class="project-label">Featured Project</p>
+            <h3 class="project-title">Cafeteria Ordering System (COS)</h3>
+            <div class="project-description">
+              <p>Led the development of a cafeteria ordering web application built with Flask. The system allows users to browse a menu, add items to a cart, and complete the checkout process. Managed team coordination, feature planning, and testing documentation.</p>
+            </div>
+            <ul class="project-tech">
+              <li>Python</li>
+              <li>Flask</li>
+              <li>HTML/CSS</li>
+              <li>JavaScript</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/ashtonalva/cafeteria-ordering-system" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View on GitHub">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                </svg>
+              </a>
+              <a href="projects/cos.html" class="project-link" aria-label="View Project Details">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-content">
+            <p class="project-label">Project</p>
+            <h3 class="project-title">RAG Chatbot with IBM Watsonx</h3>
+            <div class="project-description">
+              <p>Built a Retrieval-Augmented Generation (RAG) chatbot that answers questions from uploaded PDFs using IBM Watsonx LLM and LangChain. Implemented the full pipeline including document loading, vector embedding with Chroma, and QA retrieval via RetrievalQA.</p>
+            </div>
+            <ul class="project-tech">
+              <li>Python</li>
+              <li>IBM Watsonx</li>
+              <li>LangChain</li>
+              <li>Gradio</li>
+              <li>Chroma</li>
+            </ul>
+            <div class="project-links">
+              <a href="projects/rag.html" class="project-link" aria-label="View RAG Project">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-content">
+            <p class="project-label">Project</p>
+            <h3 class="project-title">Machine Learning Fundamentals</h3>
+            <div class="project-description">
+              <p>Applied core ML techniques including classification, regression, clustering, and dimensionality reduction using Scikit-learn, Pandas, and NumPy. Built and evaluated models using logistic regression, SVM, k-means, DBSCAN, and PCA.</p>
+            </div>
+            <ul class="project-tech">
+              <li>Python</li>
+              <li>Scikit-learn</li>
+              <li>Pandas</li>
+              <li>NumPy</li>
+            </ul>
+            <div class="project-links">
+              <a href="projects/ml.html" class="project-link" aria-label="View ML Project">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-content">
+            <p class="project-label">Project</p>
+            <h3 class="project-title">Watson NLP Emotion Detector</h3>
+            <div class="project-description">
+              <p>Developed a web application using IBM Watson Natural Language Processing to detect and classify emotional tone in user input. Integrated Flask for the backend and designed the interface using HTML/CSS/JavaScript.</p>
+            </div>
+            <ul class="project-tech">
+              <li>Python</li>
+              <li>Flask</li>
+              <li>IBM Watson</li>
+              <li>HTML/CSS/JS</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/ashtonalva/watson-nlp-web-app" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View on GitHub">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                </svg>
+              </a>
+              <a href="projects/watson.html" class="project-link" aria-label="View Project Details">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <div class="project-content">
+            <p class="project-label">Project</p>
+            <h3 class="project-title">Geometry Dash Clone</h3>
+            <div class="project-description">
+              <p>Created a browser-based 2D platformer inspired by Geometry Dash to demonstrate game mechanics including jump physics, collision detection, and frame-based animation.</p>
+            </div>
+            <ul class="project-tech">
+              <li>JavaScript</li>
+              <li>HTML5 Canvas</li>
+              <li>Game Development</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/ashtonalva/geometry-dash-clone" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View on GitHub">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                </svg>
+              </a>
+              <a href="projects/geometry.html" class="project-link" aria-label="View Project Details">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills" class="skills">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">03.</span>
+        <h2 class="section-title">Skills & Technologies</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="skills-content">
+        <div class="skill-category">
+          <h3 class="skill-category-title">Languages</h3>
+          <div class="skill-items">
+            <span class="skill-item">JavaScript</span>
+            <span class="skill-item">Python</span>
+            <span class="skill-item">Java</span>
+            <span class="skill-item">C++</span>
+            <span class="skill-item">HTML/CSS</span>
+            <span class="skill-item">SQL</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3 class="skill-category-title">Frameworks & Libraries</h3>
+          <div class="skill-items">
+            <span class="skill-item">React</span>
+            <span class="skill-item">Node.js</span>
+            <span class="skill-item">Express</span>
+            <span class="skill-item">TensorFlow</span>
+            <span class="skill-item">PyTorch</span>
+            <span class="skill-item">Flask</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3 class="skill-category-title">Tools & Technologies</h3>
+          <div class="skill-items">
+            <span class="skill-item">Git</span>
+            <span class="skill-item">Docker</span>
+            <span class="skill-item">AWS</span>
+            <span class="skill-item">Linux</span>
+            <span class="skill-item">MongoDB</span>
+            <span class="skill-item">PostgreSQL</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3 class="skill-category-title">Areas of Interest</h3>
+          <div class="skill-items">
+            <span class="skill-item">Machine Learning</span>
+            <span class="skill-item">AI</span>
+            <span class="skill-item">Cybersecurity</span>
+            <span class="skill-item">Full-Stack Development</span>
+            <span class="skill-item">Cloud Computing</span>
+            <span class="skill-item">Data Science</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <div class="container">
+      <div class="section-header">
+        <span class="section-number">04.</span>
+        <h2 class="section-title">Get In Touch</h2>
+        <div class="section-line"></div>
+      </div>
+      <div class="contact-content">
+        <p class="contact-description">
+          I'm currently looking for new opportunities, my inbox is always open. 
+          Whether you have a question or just want to say hi, I'll try my best to get back to you!
+        </p>
+        <a href="mailto:ashtondarryl@gmail.com" class="btn btn-primary btn-large">Say Hello</a>
+        <div class="social-links">
+          <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+            </svg>
+          </a>
+          <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+              <rect x="2" y="9" width="4" height="12"></rect>
+              <circle cx="4" cy="4" r="2"></circle>
+            </svg>
+          </a>
+          <a href="mailto:ashtondarryl@gmail.com" class="social-link" aria-label="Email">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+              <polyline points="22,6 12,13 2,6"></polyline>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <p>Designed & Built by Ashton Alva</p>
+      <p class="footer-year">&copy; <span id="current-year"></span> All rights reserved.</p>
+    </div>
   </footer>
 
   <script src="js/script.js"></script>
