--- a/projects.html
+++ b/projects.html
@@ -1,72 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0; url=index.html#projects">
+  <title>Projects | Ashton Alva</title>
+  <script>
+    window.location.href = 'index.html#projects';
+  </script>
 </head>
 <body>
-
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="skills.html">Skills</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <main>
-    <section class="projects">
-      <h1>Projects</h1>
-
-      <div class="project">
-        <h2><a href="projects/cos.html">Cafeteria Ordering System (COS) Web App</a></h2>
-        <p>Led the development of a cafeteria ordering web application built with Flask. The system allows users to browse a menu, add items to a cart, and complete the checkout process. Managed team coordination, feature planning, and testing documentation. Designed the app to be intuitive and extensible for future enhancements.</p>
-        <p><strong>Technologies:</strong> Python, Flask, HTML, CSS, JavaScript</p>
-        <a href="https://github.com/ashtonalva/cafeteria-ordering-system" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
-      </div>
-
-      <div class="project">
-        <h2><a href="projects/watson.html">Watson NLP Emotion Detector</a></h2>
-        <p>Developed a web application using IBM Watson Natural Language Processing to detect and classify emotional tone in user input. Integrated Flask for the backend and designed the interface using HTML/CSS/JavaScript.</p>
-        <p><strong>Technologies:</strong> Python, Flask, IBM Watson, HTML, CSS, JavaScript</p>
-        <a href="https://github.com/ashtonalva/watson-nlp-web-app" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
-      </div>
-
-      <div class="project">
-        <h2><a href="projects/ml.html">Machine Learning Fundamentals Project</a></h2>
-        <p>Applied core ML techniques including classification, regression, clustering, and dimensionality reduction using Scikit-learn, Pandas, and NumPy. Built and evaluated models using logistic regression, SVM, k-means, DBSCAN, and PCA. Emphasized best practices in model evaluation and lifecycle management.</p>
-        <p><strong>Technologies:</strong> Python, Scikit-learn, Pandas, NumPy</p>
-      </div>
-
-      <div class="project">
-        <h2><a href="projects/rag.html">RAG Chatbot with IBM Watsonx & LangChain</a></h2>
-        <p>Built a Retrieval-Augmented Generation (RAG) chatbot that answers questions from uploaded PDFs using IBM Watsonx LLM and LangChain. Implemented the full pipeline including document loading, vector embedding with Chroma, and QA retrieval via RetrievalQA. Built a Gradio web interface for real-time use.</p>
-        <p><strong>Technologies:</strong> Python, IBM Watsonx, LangChain, Gradio, Chroma</p>
-      </div>
-
-      <div class="project">
-        <h2><a href="projects/geometry.html">Geometry Dash Clone</a></h2>
-        <p>Created a browser-based 2D platformer inspired by Geometry Dash to demonstrate game mechanics including jump physics, collision detection, and frame-based animation.</p>
-        <p><strong>Technologies:</strong> JavaScript, HTML5 Canvas</p>
-        <a href="https://github.com/ashtonalva/geometry-dash-clone" target="_blank" rel="noopener noreferrer" class="button-link">View on GitHub</a>
-      </div>
-
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Ashton Alva. All rights reserved.</p>
-    <p>
-      <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer">GitHub</a> |
-      <a href="https://linkedin.com/in/ashtonalva" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
-      <a href="mailto:ashtondarryl@gmail.com">Email</a>
-    </p>
-  </footer>
-
-  <script src="js/script.js"></script>
+  <p>If you are not redirected, <a href="index.html#projects">click here</a>.</p>
 </body>
 </html>
