Add Ascend iOS Workout Tracker and Edge QUIC CV Dashboard projects

--- a/index.html
+++ b/index.html
@@ -113,6 +113,67 @@
         <div class="project-card featured">
           <div class="project-content">
             <p class="project-label">Featured Project</p>
+            <h3 class="project-title">Ascend - iOS Workout Tracker</h3>
+            <div class="project-description">
+              <p>Built a comprehensive iOS workout tracking app with real-time exercise monitoring, automatic PR detection, progress visualization, and iCloud synchronization.</p>
+            </div>
+            <ul class="project-tech">
+              <li>Swift</li>
+              <li>SwiftUI</li>
+              <li>CloudKit</li>
+              <li>MVVM</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/BXM22/Ascend_1.0.git" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View on GitHub">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                </svg>
+              </a>
+              <a href="projects/ascend-workout-tracker.html" class="project-link" aria-label="View Project Details">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card featured">
+          <div class="project-content">
+            <p class="project-label">Featured Project</p>
+            <h3 class="project-title">Edge QUIC CV - Real-Time Multi-Feed Video Dashboard</h3>
+            <div class="project-description">
+              <p>Built a real-time video streaming dashboard that displays synchronized video feeds from edge devices using QUIC protocol, with improved WebSocket handling and automated deployment scripts.</p>
+            </div>
+            <ul class="project-tech">
+              <li>React</li>
+              <li>TypeScript</li>
+              <li>Python</li>
+              <li>QUIC</li>
+              <li>OpenCV</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://github.com/jacobfishel/edge-quic-cv" target="_blank" rel="noopener noreferrer" class="project-link" aria-label="View on GitHub">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+                </svg>
+              </a>
+              <a href="projects/edge-quic-cv-dashboard.html" class="project-link" aria-label="View Project Details">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                  <polyline points="15 3 21 3 21 9"></polyline>
+                  <line x1="10" y1="14" x2="21" y2="3"></line>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card featured">
+          <div class="project-content">
+            <p class="project-label">Featured Project</p>
             <h3 class="project-title">Cafeteria Ordering System (COS)</h3>
             <div class="project-description">
               <p>Led the development of a cafeteria ordering web application built with Flask. The system allows users to browse a menu, add items to a cart, and complete the checkout process. Managed team coordination, feature planning, and testing documentation.</p>
