--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
           <span class="name-line">I build things for the web.</span>
         </h1>
         <p class="hero-description">
-          I'm a Computer Science student passionate about AI, cybersecurity, and full-stack development. 
-          I enjoy building innovative solutions and constantly exploring new technologies to improve user experiences.
+          I'm a Computer Science student at CSU Fullerton passionate about AI, mobile development, and full-stack systems. 
+          I enjoy building innovative solutions including native iOS apps and real-time video streaming systems, constantly 
+          exploring new technologies to improve user experiences.
         </p>
         <div class="hero-buttons">
           <a href="#projects" class="btn btn-primary">View My Work</a>
@@ -79,22 +80,24 @@
       <div class="about-content">
         <div class="about-text">
           <p>
-            Hello! I'm Ashton, a Computer Science student based in the US, passionate about creating 
+            Hello! I'm Ashton, a Computer Science student at California State University, Fullerton, 
+            graduating in May 2026. Based in Fullerton, California, I'm passionate about creating 
             exceptional digital experiences through code.
           </p>
           <p>
-            I specialize in building full-stack applications with a focus on modern technologies, 
-            AI integration, and cybersecurity. My goal is to create solutions that are not only 
-            functional but also elegant and user-friendly.
+            I specialize in building full-stack applications, native iOS apps, and AI-powered solutions 
+            with a focus on modern technologies, machine learning, and real-time systems. Currently working 
+            as a freelance technician, I bring hands-on technical experience to software development. 
+            My goal is to create solutions that are not only functional but also elegant and user-friendly.
           </p>
           <p>Here are a few technologies I've been working with recently:</p>
           <ul class="tech-list">
-            <li>JavaScript (ES6+)</li>
+            <li>Swift & SwiftUI</li>
             <li>Python</li>
-            <li>React</li>
-            <li>Node.js</li>
-            <li>Machine Learning</li>
-            <li>Cybersecurity</li>
+            <li>React & TypeScript</li>
+            <li>QUIC & WebSockets</li>
+            <li>Machine Learning & AI</li>
+            <li>Computer Vision</li>
           </ul>
         </div>
       </div>
@@ -326,10 +329,13 @@
         <div class="skill-category">
           <h3 class="skill-category-title">Languages</h3>
           <div class="skill-items">
-            <span class="skill-item">JavaScript</span>
             <span class="skill-item">Python</span>
-            <span class="skill-item">Java</span>
+            <span class="skill-item">Swift</span>
+            <span class="skill-item">JavaScript</span>
+            <span class="skill-item">TypeScript</span>
             <span class="skill-item">C++</span>
+            <span class="skill-item">C#</span>
+            <span class="skill-item">x86 Assembly</span>
             <span class="skill-item">HTML/CSS</span>
             <span class="skill-item">SQL</span>
           </div>
@@ -338,33 +344,41 @@
           <h3 class="skill-category-title">Frameworks & Libraries</h3>
           <div class="skill-items">
             <span class="skill-item">React</span>
+            <span class="skill-item">SwiftUI</span>
             <span class="skill-item">Node.js</span>
-            <span class="skill-item">Express</span>
-            <span class="skill-item">TensorFlow</span>
-            <span class="skill-item">PyTorch</span>
             <span class="skill-item">Flask</span>
+            <span class="skill-item">CloudKit</span>
+            <span class="skill-item">OpenCV</span>
+            <span class="skill-item">YOLOv8</span>
+            <span class="skill-item">LangChain</span>
+            <span class="skill-item">NumPy</span>
           </div>
         </div>
         <div class="skill-category">
           <h3 class="skill-category-title">Tools & Technologies</h3>
           <div class="skill-items">
-            <span class="skill-item">Git</span>
-            <span class="skill-item">Docker</span>
-            <span class="skill-item">AWS</span>
+            <span class="skill-item">Git/GitHub</span>
+            <span class="skill-item">QUIC (aioquic)</span>
+            <span class="skill-item">WebSockets</span>
+            <span class="skill-item">Agile</span>
             <span class="skill-item">Linux</span>
-            <span class="skill-item">MongoDB</span>
-            <span class="skill-item">PostgreSQL</span>
+            <span class="skill-item">Windows</span>
+            <span class="skill-item">iOS</span>
+            <span class="skill-item">Android</span>
+            <span class="skill-item">asyncio</span>
           </div>
         </div>
         <div class="skill-category">
-          <h3 class="skill-category-title">Areas of Interest</h3>
+          <h3 class="skill-category-title">Areas of Expertise</h3>
           <div class="skill-items">
-            <span class="skill-item">Machine Learning</span>
-            <span class="skill-item">AI</span>
-            <span class="skill-item">Cybersecurity</span>
+            <span class="skill-item">AI & Machine Learning</span>
+            <span class="skill-item">Generative AI & LLMs</span>
+            <span class="skill-item">Computer Vision</span>
+            <span class="skill-item">Mobile App Development</span>
+            <span class="skill-item">Real-Time Systems</span>
+            <span class="skill-item">Data Structures & Algorithms</span>
             <span class="skill-item">Full-Stack Development</span>
-            <span class="skill-item">Cloud Computing</span>
-            <span class="skill-item">Data Science</span>
+            <span class="skill-item">Cybersecurity</span>
           </div>
         </div>
       </div>
@@ -384,6 +398,11 @@
           I'm currently looking for new opportunities, my inbox is always open. 
           Whether you have a question or just want to say hi, I'll try my best to get back to you!
         </p>
+        <div class="contact-info">
+          <p><strong>Location:</strong> Fullerton, California</p>
+          <p><strong>Phone:</strong> <a href="tel:3467029899">346-702-9899</a></p>
+          <p><strong>Email:</strong> <a href="mailto:ashtondarryl@gmail.com">ashtondarryl@gmail.com</a></p>
+        </div>
         <a href="mailto:ashtondarryl@gmail.com" class="btn btn-primary btn-large">Say Hello</a>
         <div class="social-links">
           <a href="https://github.com/ashtonalva" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub">
